Calendar: Store "Web page" in ExtendedProperty
I use EWS in Evolution in order to access a Microsoft Exchange Server 2016 mailbox. Saving an EWS calendar item discards its "Web page" value. No such problem with local calendar.
Reproducible on Fedora 38 with Evolution 3.48.4:
$ rpm -qa *evolution* | sort
evolution-3.48.4-1.fc38.x86_64
evolution-data-server-3.48.4-1.fc38.x86_64
evolution-data-server-langpacks-3.48.4-1.fc38.noarch
evolution-ews-3.48.2-2.fc38.x86_64
evolution-ews-langpacks-3.48.2-2.fc38.noarch
evolution-langpacks-3.48.4-1.fc38.noarch
evolution-pst-3.48.4-1.fc38.x86_64
and on Fedora 39 with Evolution 3.50.3:
$ rpm -qa *evolution* | sort
evolution-3.50.3-1.fc39.x86_64
evolution-data-server-3.50.3-1.fc39.x86_64
evolution-data-server-langpacks-3.50.3-1.fc39.noarch
evolution-ews-3.50.3-1.fc39.x86_64
evolution-ews-langpacks-3.50.3-1.fc39.noarch
evolution-langpacks-3.50.3-1.fc39.noarch
evolution-pst-3.50.3-1.fc39.x86_64
Steps to reproduce:
- switch to Evolution's calendar window
- create appointment or meeting in Microsoft Exchange calendar
- in "Web Page" input line enter: https://getfedora.org
- either click "save" or "save and close"; both discard "Web Page" value
workaround: save to "Location" input line